# clinvoice_adapter_postgres

./: Cargo.toml  LICENSE  README.md  package-lock.json  sqlx-data.json
ci/: test.ts
src/: lib.rs  schema.rs
src/fmt/: contains.rs  currency.rs  date_time_ext.rs  interval.rs  location_recursive_cte.rs  mod.rs  timestamptz.rs  uuid.rs
src/fmt/contains/: display.rs  from.rs
src/fmt/currency/: display.rs  from.rs
src/fmt/interval/: display.rs  from.rs
src/fmt/location_recursive_cte/: display.rs
src/fmt/timestamptz/: display.rs  from.rs
src/fmt/uuid/: display.rs  from.rs
src/schema/: adapter.rs  contact.rs  contact_info.rs  department.rs  employee.rs  expenses.rs  initializable--jobs--date-integrity-test.lua  initializable.rs  job.rs  location.rs  organization.rs  timesheet.rs  util.rs  write_where_clause.rs
src/schema/contact/: contact_adapter.rs  deletable.rs  retrievable.rs  updatable.rs
src/schema/department/: deletable.rs  department_adapter.rs  retrievable.rs  updatable.rs
src/schema/employee/: deletable.rs  employee_adapter.rs  retrievable.rs  updatable.rs
src/schema/expenses/: deletable.rs  expenses_adapter.rs  retrievable.rs  updatable.rs
src/schema/initializable/: 00-locations.sql  01-organizations.sql  02-departments.sql  03-employees.sql  04-contact-information.sql  05-money.sql  06-jobs.sql  07-job_departments.sql  08-timesheets.sql  09-expenses.sql
src/schema/job/: deletable.rs  job_adapter.rs  retrievable.rs  updatable.rs
src/schema/location/: deletable.rs  location_adapter.rs  retrievable.rs  updatable.rs
src/schema/location/deletable/: error.rs
src/schema/organization/: deletable.rs  organization_adapter.rs  retrievable.rs  updatable.rs
src/schema/timesheet/: deletable.rs  retrievable.rs  timesheet_adapter.rs  updatable.rs
