# See https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "winvoice-adapter-postgres"
version = "0.10.5"
authors = ["Iron-E <code.iron.e@gmail.com>"]
description = "A Winvoice Adapter for the Postgres database"

edition = "2021"
license = "GPL3"
readme = "README.md"
repository = "https://www.github.com/Iron-E/winvoice-adapter-postgres"

[dependencies]
async-trait = "0.1"
futures = "0.3"
humantime = "2"
money2 = "0.8"
shellexpand = "2"
thiserror = "1"

[dependencies.winvoice-adapter]
branch = "release/0.20"
default-features = false
git = "https://github.com/Iron-E/winvoice-adapter"

[dependencies.winvoice-match]
branch = "release/0.10"
git = "https://github.com/Iron-E/winvoice-match"

[dependencies.winvoice-schema]
branch = "release/0.12"
git = "https://github.com/Iron-E/winvoice-schema"

[dependencies.sqlx]
features = ["chrono", "decimal", "macros", "postgres", "runtime-tokio-rustls", "tls"]
version = "0.5"

[dev-dependencies]
dotenvy = "0.15"
lazy_static = "1"
pretty_assertions = "1"

[dependencies.tokio]
features = ["macros", "rt"]
version = "1"
